frontend/test/should_pass/basic_016.grg
rule r {
	x : Node;
	negative {
		x --> y : Node;
	}

	replace {
		x --> y : Node;
	}
}

