frontend/test/should_fail/negative_004.grg
rule r {
	negative {
		patternpath;
	}
	
	replace {
	}
}
